--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,21 @@ body {
   height: 80px;
 }
 
-.border1 .col-design {
+.border1 .bg-img {
+  background-image: url(../../img/futurecity.jpg);
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.col-design {
   border-bottom-left-radius: 20px;
   border-top-left-radius: 20px;
 }
 
-.border1 .col-x {
+.col-x {
   margin: -260px auto;
   z-index: 3;
   position: relative;
@@ -22,26 +31,26 @@ body {
   padding-right: 0 !important;
 }
 
-.border1 .col-x .title {
+.col-x .title {
   font-family: Calibri, sans-serif;
   font-size: 25px;
   color: #686868;
   margin-top: 18%;
 }
 
-.border1 .col-x .name {
+.col-x .name {
   font-weight: 800 !important;
   font-family: round;
   font-size: calc(3rem + 1.5vw);
   color: #AB1CE4;
 }
 
-.border1 .col-x .content {
+.col-x .content {
   color: #888888;
   font-size: 20px;
 }
 
-.border1 .col-x .button .start {
+.col-x .button .start {
   background-color: #A21AD9;
   width: 75%;
   border-radius: 50px;
@@ -50,22 +59,13 @@ body {
   font-weight: 500;
 }
 
-.border1 .col-x .button .download {
+.col-x .button .download {
   width: 75%;
   border-radius: 50px;
   -webkit-box-shadow: 0 0.125rem 0.25rem #A6A6A6  !important;
           box-shadow: 0 0.125rem 0.25rem #A6A6A6  !important;
   color: #A21AD9;
   font-weight: 500;
-}
-
-.border1 .bg-img {
-  background-image: url(../../img/futurecity.jpg);
-  border-bottom-right-radius: 20px;
-  border-top-right-radius: 20px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
 }
 
 #hinhchunhat {
@@ -108,6 +108,16 @@ body {
   padding: 1.2rem;
 }
 
+.border2 {
+  visibility: hidden;
+  margin: 0 auto;
+  width: 80%;
+  height: 80px;
+  z-index: 4;
+  position: relative;
+  margin-top: -300px;
+}
+
 @font-face {
   font-family: Round;
   src: url(../../fonts/VarelaRound-Regular.ttf);
@@ -128,36 +138,21 @@ body {
 
 @media (max-width: 730px) {
   .border1 {
-    max-width: 70%;
-    margin-top: 35px;
-    padding-left: 0;
-  }
-  .border1 .col-design {
-    padding-top: 30px !important;
-    border-radius: 20px;
-    max-height: 650px;
-  }
-  .bg-img {
     visibility: hidden;
   }
-  .start {
-    font-size: 17px !important;
+  .border2 {
+    visibility: inherit;
   }
-  .download {
-    font-size: 17px !important;
+  .border2 .col-design {
+    padding-top: 15px;
+    padding-bottom: 75px;
+    border-radius: 10px !important;
+  }
+  #hinhtamgiac-trentrai {
+    visibility: hidden;
   }
   #hinhtamgiac-duoiphai {
-    width: 0;
-    height: 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    border-right: 320px solid #AB1CE4;
-    border-top: 380px solid transparent;
-    z-index: 1;
-  }
-  .content {
-    font-size: 18px !important;
+    visibility: hidden;
   }
 }
 /*# sourceMappingURL=style.css.map */
